# HAAS

./: .gitignore  CLAUDE.md  Framework.md  README.md  pyproject.toml
src/haas/: __init__.py  audit.py  control.py  dashboard.py  energy.py  entities.py  event_log.py  failures.py  handshake.py  protections.py  risk.py  simulation.py  store.py  telemetry.py  zones.py
tests/: test_audit.py  test_control.py  test_dashboard.py  test_energy.py  test_entities.py  test_failures.py  test_handshake.py  test_protections.py  test_risk.py  test_simulation.py  test_store.py  test_telemetry.py  test_zones.py
